<resources>
    <string name="app_name">EmleNotesTask</string>
    <string name="explore">Explore</string>
    <string name="study_page">Study Page</string>
    <string name="home">Home</string>
    <string name="downloads">Downloads</string>
    <string name="hub">Hub</string>
    <string name="select_contacts">Select Contacts</string>
    <string name="new_group">New Group</string>
    <string name="favorite_contacts">Favorite Contacts</string>
</resources>