<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/page_1"
        android:icon="@drawable/ic_courses"
        android:title="@string/explore"/>
    <item
        android:id="@+id/page_2"
        android:icon="@drawable/ic_saved"
        android:title="@string/study_page"/>
    <item
        android:id="@+id/page_3"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        />
    <item
        android:id="@+id/page_4"
        android:icon="@drawable/ic_group"
        android:title="@string/downloads"/>
    <item
        android:id="@+id/page_5"
        android:icon="@drawable/ic_profile"
        android:title="@string/hub"/>
</menu>